@@ -5,11 +5,10 @@
   <meta name="generator" content=
   "tidyp for OpenBSD (v1.04), see www.w3.org">
   <meta name="generator" content="Bluefish 2.2.8">
-  <meta name="generator" content="Bluefish 2.2.8">
   <meta content="text/html; charset=us-ascii" http-equiv=
   "Content-Type">
   <meta http-equiv="Last-Modified" content=
-  "Sun, 16 Oct 2016 01:29:41 UTC">
+  "Mon, 17 Oct 2016 17:19:05 UTC">
 
   <title>Ublu Midrange and Mainframe Life Cycle Extension
   Language</title>
@@ -61,7 +60,7 @@
 
   <p>Author: Jack J. Woehr<br>
   Original date: 2013-07-11<br>
-  Last edit: 2016-10-16</p>
+  Last edit: 2016-10-17</p>
   <pre>
  Copyright (c) 2015, Absolute Performance, Inc.
   http://www.absolute-performance.com
@@ -9616,9 +9615,9 @@ Type help for help. Type license for license. Type bye to exit.
   <blockquote>
     <tt>/4? [-as400 @as400] [--,-outq ~@outqueue] [-to @var] [-from
     @qnamevar] [-clear [[user jobuser] | [form formtype] | all]] |
-    [-getfloat ~@{attr_int}] | [-getint ~@{attr_int}] | [-getstring
-    ~@{attr_int}] |[-hold] | [-new,-instance] | [-noop] |
-    [-release] | [-info] | [-infoparm ATTR]] outputqueuename system
+    [-get ~@{attributename}] | [-getfloat ~@{attr_int}] | [-getint
+    ~@{attr_int}] | [-getstring ~@{attr_int}] | [-hold] |
+    [-new,-instance] | [-noop] | [-release]] outputqueuename system
     user password : operate on output queues</tt><br>
     <br>
     The <tt>outq</tt> command operates on output queues. If the
@@ -9670,11 +9669,17 @@ Type help for help. Type license for license. Type bye to exit.
         </ul>
       </li>
 
+      <li><tt>-get ~@attribute</tt> puts the value of the named
+      attribute to the destination datasink. <a href=
+      "#Appendix_A">Appendix A: Printer Attributes</a> lists the
+      attributes that can be queried.</li>
+
       <li>The following three operations get attributes of the
-      output queue. These attributes are represented by integer
-      selectors whose values are described (deep) in the JTOpen
-      documentation. <b>There is extended support for these
-      operations in <tt>extensions/ux.outq.ublu</tt></b>
+      output queue by selector. These attributes are represented by
+      integer selectors whose values are described (deep) in the
+      JTOpen documentation. The attribute selectors are defined for
+      your convenience as constants in
+      <tt>extensions/ux.printobj.ublu</tt>.
 
         <ul>
           <li><tt>-getfloat ~@{attr_int}</tt> puts the float value
@@ -9687,9 +9692,9 @@ Type help for help. Type license for license. Type bye to exit.
           output queue represented by the <tt>--,-outq
           ~@outqueue</tt> dash command.</li>
 
-          <li><tt>-getstring ~@{attr_int}</tt> puts the string value
-          of the attribute represented by <i>attr_int</i> of the
-          output queue represented by the <tt>--,-outq
+          <li><tt>-getstring ~@{attr_int}</tt> puts the string
+          value of the attribute represented by <i>attr_int</i> of
+          the output queue represented by the <tt>--,-outq
           ~@outqueue</tt> dash command.</li>
         </ul>
       </li>
@@ -9699,28 +9704,6 @@ Type help for help. Type license for license. Type bye to exit.
 
         <ul>
           <li>Holds the queue</li>
-        </ul>
-      </li>
-
-      <li>
-        <tt>-info</tt>
-
-        <ul>
-          <li>puts the OutputQueue object to the destination
-          datasink. This can be used to store the instance for
-          re-use by <tt>-outq @q</tt> for the <tt>outq</tt> or
-          <tt><a href="#spoolf">spoolf</a></tt> commands. Same as
-          <tt>-instance</tt>.</li>
-        </ul>
-      </li>
-
-      <li>
-        <tt><strike>-infoparm ATTR</strike></tt><i>Deprecated, use
-        <tt>-getfloat -getint -getstring</tt></i>
-
-        <ul>
-          <li>Returns info on the Print Object parameter specified
-          by an ATTR string.</li>
         </ul>
       </li>
 
@@ -9791,8 +9774,10 @@ Type help for help. Type license for license. Type bye to exit.
   <h4><a name="printer" id="printer"></a> <tt>printer</tt></h4>
 
   <blockquote>
-    <tt>/4? [-as400 ~@as400] [--,-printer ~@printer] [-to @var]
-    [-get ~@{attribute}] | [[-new,-instance] | [-set ~@{attribute}
+    <tt>/4? [-as400 @as400] [--,-printer ~@printer] [-to @var]
+    [[-get ~@{attr_name}] | [-getfloat ~@{attr_int}] [-getfloat
+    ~@{attr_int}] | [-getint ~@{attr_int}] | [-getstring
+    ~@{attr_int}] | [-new,-instance] | [-set ~@{attribute}
     ~@{value}] [-wtrjob]] ~@{printername} ~@{system} ~@{user}
     ~@{password} : instance as400 printer and get/set
     attributes</tt><br>
@@ -9824,6 +9809,31 @@ Type help for help. Type license for license. Type bye to exit.
       attribute to the destination datasink. <a href=
       "#Appendix_A">Appendix A: Printer Attributes</a> lists the
       attributes that can be queried.</li>
+
+      <li>The following three operations get attributes of the
+      output queue by selector. These attributes are represented by
+      integer selectors whose values are described (deep) in the
+      JTOpen documentation. The attribute selectors are defined for
+      your convenience as constants in
+      <tt>extensions/ux.printobj.ublu</tt>.
+
+        <ul>
+          <li><tt>-getfloat ~@{attr_int}</tt> puts the float value
+          of the attribute represented by <i>attr_int</i> of the
+          output queue represented by the <tt>--,-printer
+          ~@printer</tt> dash command.</li>
+
+          <li><tt>-getint ~@{attr_int}</tt> puts the integer value
+          of the attribute represented by <i>attr_int</i> of the
+          output queue represented by the <tt>--,-outq
+          ~@printer</tt> dash command.</li>
+
+          <li><tt>-getstring ~@{attr_int}</tt> puts the string
+          value of the attribute represented by <i>attr_int</i> of
+          the output queue represented by the <tt>--,-outq
+          ~@printer</tt> dash command.</li>
+        </ul>
+      </li>
 
       <li>
         <tt>-set ~@attribute value</tt> sets the named attribute to
