@@ -11,12 +11,15 @@ Commands
 * general
 	* minor fixes at Java level
 * individual commands
-	* outq -getint -getfloat -getstring
+	* outq and printer rationalized
+		* outq -get -getint -getfloat -getstring
+		* outq removed superflous dash-commands
+		* printer -getint -getfloat -getstring
 	* savesys
 	
 Extensions
 * new
-	* ux.outq.ublu
+	* ux.printobj.ublu
 	
 1.1.3 2016-10-14
 System:
